<resources>
    <string name="app_name">PrimeNumber</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="next_button">Next</string>
    <string name="hint_button">Hint</string>
    <string name="cheat_button">Cheat</string>
    <string name="show_hint_button">Show Hint</string>
    <string name="show_cheat_button">Show Answer</string>
</resources>
