<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background = "#558B2F"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:layout_gravity="center_vertical|center"
    tools:context="com.example.anuj.primenumberr.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/question"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center"
        android:text="@id/questionTextView"
        android:textAlignment="center"
        android:background="#FFEB3B"
        android:typeface="normal"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#000000" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="20dp">


        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/view"
            android:clickable="true"
            android:text="@string/yes_button"
            android:background="#006400"
            android:textStyle="bold"
            android:textAlignment="center"
            android:typeface="normal"
            android:textSize="18sp"
            android:fontFamily="sans-serif" />

        <View
            android:id="@+id/view"
            android:layout_height="1dp"
            android:layout_width="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_toRightOf="@id/view"
            android:clickable="true"
            android:text="@string/no_button"
            android:background="#FF0000"
            android:textStyle="bold"
            android:textAlignment="center"
            android:typeface="normal"
            android:textSize="18sp"


            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        >

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:text="@string/next_button"
            android:background="#0000ff"
            android:textStyle="bold"
            android:textAlignment="center"
            android:typeface="normal"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="10dp">


        <Button
            android:id="@+id/hintButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/viewTwo"
            android:clickable="true"
            android:onClick="showHint"
            android:text="@string/hint_button"
            android:background="#0091ea"
            android:textStyle="bold"
            android:textAlignment="center"
            android:typeface="normal"
            android:textSize="18sp"
            android:fontFamily="sans-serif" />


        <View
            android:id="@+id/viewTwo"
            android:layout_height="1dp"
            android:layout_width="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/cheatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_toRightOf="@id/viewTwo"
            android:clickable="true"
            android:onClick="showCheat"
            android:text="@string/cheat_button"
            android:background="#00bfa5"
            android:textStyle="bold"

            android:textAlignment="center"
            android:typeface="normal"
            android:textSize="18sp"


            />
    </RelativeLayout>
</LinearLayout>
